landing page update
we do a little bit of design

--- a/index.html
+++ b/index.html
@@ -15,23 +15,19 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&family=Readex+Pro&display=swap" rel="stylesheet">
-<body style="background:#231145;font-family: 'Nunito', sans-serif;margin:0;">
-    <div class="everything">
-        <div class="centerstuff" style="padding: 8px;border:6px black solid;border-radius:15%;overflow: hidden;">
-            <a href="/guide/" class="hover">
-                <img src="./img/tip.jpg" class="button image">
+<body>
+    <div class="landing-page">
+        <div>
+            <a href="/guide/">
+                <img src="./img/tip.jpg">
             </a>
-            <div class="middle">
-                <a href="/guide/" class="p">Neso buy guide</a>
-            </div>
+            <a href="/guide/" class="center">Neso buy guide</a>
         </div>
-        <div class="centerstuff" style="padding: 8px;border:6px black solid;border-radius:15%;overflow: hidden;">
-            <a href="/chars/" class="hover">
-                <img src="" class="button neso image">
+        <div>
+            <a href="/chars/">
+                <img src="" class="neso">
             </a>
-            <div class="middle">
-                <a href="/chars/" class="p">NesoDB</a>
-            </div>
+            <a href="/chars/" class="center">NesoDB</a>
         </div>
     </div>
     <script type="text/javascript">
